Updating IAPI unit tests for Org ID conversion